--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,24 @@
         </div>
       </div>
     </div>
-
+<div class="row">
+  <div class="card-group">
+    <div class="card m-2 col-12 shadow">
+      <div class="card-body" id="overTime">
+        <h5 class="card-title">
+          Deliveries On Time Over Time
+          <span
+            ><a
+              class="reset"
+              style="display: none"
+              href="javascript: overTime.filterAll(); dc.redrawAll();"
+              >reset</a
+            ></span
+          >
+        </h5>
+      </div>
+  </div>
+</div>
     <script src="index.js"></script>
   </body>
 </html>
