--- a/public/index.html
+++ b/public/index.html
@@ -11,32 +11,18 @@
   </head>
 
   <body class="bg-light">
+    <h1>Delvieries Over Time</h1>
     <div class="row">
       <div class="card-group">
         <div class="card m-2 shadow">
-          <div class="card-body" id="years">
+          <div class="card-body" id="deliveriesOverTime">
             <h5 class="card-title">
-              Delivieries By Year
+              Totals
               <span
                 ><a
                   class="reset"
                   style="display: none"
-                  href="javascript: rowChartYr.filterAll(); dc.redrawAll();"
-                  >reset</a
-                ></span
-              >
-            </h5>
-          </div>
-        </div>
-        <div class="card m-2 shadow">
-          <div class="card-body" id="months">
-            <h5 class="card-title">
-              Deliveries by Month
-              <span
-                ><a
-                  class="reset"
-                  style="display: none"
-                  href="javascript: barChartMon.filterAll(); dc.redrawAll();"
+                  href="javascript: deliveriesOverTime.filterAll(); dc.redrawAll();"
                   >reset</a
                 ></span
               >
@@ -46,6 +32,25 @@
       </div>
     </div>
     <div class="row">
+      <div class="card-group">
+        <div class="card m-2 shadow">
+          <div class="card-body" id="percentChart">
+            <h5 class="card-title">
+              Percent
+              <span
+                ><a
+                  class="reset"
+                  style="display: none"
+                  href="javascript: percentChart.filterAll(); dc.redrawAll();"
+                  >reset</a
+                ></span
+              >
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row">
       <div class="card-group">
         <div class="card m-2 col-3 shadow">
           <div class="card-body" id="onTimePieChart">
@@ -96,7 +101,7 @@
         </h5>
       </div>
   </div>
-</div>
+</div> -->
     <script src="index.js"></script>
   </body>
 </html>
